@@ -34,9 +34,9 @@ Linux operating system
 Java runtime environment
 ^^^^^^^^^^^^^^^^^^^^^^^^
 
-Trino requires a 64-bit version of Java 11, with a minimum required version of 11.0.11.
-Earlier patch versions such as 11.0.2 do not work, nor will earlier major versions such as Java 8.
-Newer major versions such as Java 12 or 13, including Java 17, are not supported -- they may work, but are not tested.
+Trino requires a 64-bit version of Java 17, with a minimum required version of 17.0.3.
+Earlier major versions such as Java 8 or Java 11 do not work.
+Newer major versions such as Java 18 or 19, are not supported -- they may work, but are not tested.
 
 We recommend using `Azul Zulu <https://www.azul.com/downloads/zulu-community/>`_
 as the JDK for Trino, as Trino is tested against that distribution.
@@ -76,7 +76,7 @@ This holds the following configuration:
   The available catalog configuration properties for a connector are described
   in the respective connector documentation.
 
-.. _node_properties:
+.. _node-properties:
 
 Node properties
 ^^^^^^^^^^^^^^^
@@ -112,7 +112,7 @@ The above properties are described below:
   The location (filesystem path) of the data directory. Trino stores
   logs and other data here.
 
-.. _jvm_config:
+.. _jvm-config:
 
 JVM config
 ^^^^^^^^^^
@@ -129,8 +129,8 @@ The following provides a good starting point for creating ``etc/jvm.config``:
 
     -server
     -Xmx16G
-    -XX:-UseBiasedLocking
-    -XX:+UseG1GC
+    -XX:InitialRAMPercentage=80
+    -XX:MaxRAMPercentage=80
     -XX:G1HeapRegionSize=32M
     -XX:+ExplicitGCInvokesConcurrent
     -XX:+ExitOnOutOfMemoryError
@@ -143,6 +143,25 @@ The following provides a good starting point for creating ``etc/jvm.config``:
     -Djdk.nio.maxCachedBufferSize=2000000
     -XX:+UnlockDiagnosticVMOptions
     -XX:+UseAESCTRIntrinsics
+    # Disable Preventive GC for performance reasons (JDK-8293861)
+    -XX:-G1UsePreventiveGC
+
+You must adjust the value for the memory used by Trino, specified with ``-Xmx``
+to the available memory on your nodes. Typically, values representing 70 to 85
+percent of the total available memory is recommended. For example, if all
+workers and the coordinator use nodes with 64GB of RAM, you can use ``-Xmx54G``.
+Trino uses most of the allocated memory for processing, with a small percentage
+used by JVM-internal processes such as garbage collection.
+
+The rest of the available node memory must be sufficient for the operating
+system and other running services, as well as off-heap memory used for native
+code initiated the JVM process.
+
+On larger nodes, the percentage value can be lower. Allocation of all memory  to
+the JVM or using swap space is not supported, and disabling swap space on the
+operating system level is recommended.
+
+Large memory allocation beyond 32GB is recommended for production clusters.
 
 Because an ``OutOfMemoryError`` typically leaves the JVM in an
 inconsistent state, we write a heap dump, for debugging, and forcibly
@@ -156,17 +175,19 @@ temporary directory by adding ``-Djava.io.tmpdir=/path/to/other/tmpdir`` to the
 list of JVM options.
 
 We enable ``-XX:+UnlockDiagnosticVMOptions`` and ``-XX:+UseAESCTRIntrinsics`` to improve AES performance for S3, etc. on ARM64 (`JDK-8271567 <https://bugs.openjdk.java.net/browse/JDK-8271567>`_)
+We disable Preventive GC (``-XX:-G1UsePreventiveGC``) for performance reasons (see `JDK-8293861 <https://bugs.openjdk.org/browse/JDK-8293861>`_)
 
-.. _config_properties:
+.. _config-properties:
 
 Config properties
 ^^^^^^^^^^^^^^^^^
 
 The config properties file, ``etc/config.properties``, contains the
-configuration for the Trino server. Every Trino server can function
-as both a coordinator and a worker, but dedicating a single machine
-to only perform coordination work provides the best performance on
-larger clusters.
+configuration for the Trino server. Every Trino server can function as both a
+coordinator and a worker. A cluster is required to include one coordinator, and
+dedicating a machine to only perform coordination work provides the best
+performance on larger clusters. Scaling and parallelization is achieved by using
+many workers.
 
 The following is a minimal configuration for the coordinator:
 
@@ -175,8 +196,6 @@ The following is a minimal configuration for the coordinator:
     coordinator=true
     node-scheduler.include-coordinator=false
     http-server.http.port=8080
-    query.max-memory=50GB
-    query.max-memory-per-node=1GB
     discovery.uri=http://example.net:8080
 
 And this is a minimal configuration for the workers:
@@ -185,8 +204,6 @@ And this is a minimal configuration for the workers:
 
     coordinator=false
     http-server.http.port=8080
-    query.max-memory=50GB
-    query.max-memory-per-node=1GB
     discovery.uri=http://example.net:8080
 
 Alternatively, if you are setting up a single machine for testing, that
@@ -197,8 +214,6 @@ functions as both a coordinator and worker, use this configuration:
     coordinator=true
     node-scheduler.include-coordinator=true
     http-server.http.port=8080
-    query.max-memory=5GB
-    query.max-memory-per-node=1GB
     discovery.uri=http://example.net:8080
 
 These properties require some explanation:
@@ -218,12 +233,6 @@ These properties require some explanation:
   Specifies the port for the HTTP server. Trino uses HTTP for all
   communication, internal and external.
 
-* ``query.max-memory``:
-  The maximum amount of distributed memory, that a query may use.
-
-* ``query.max-memory-per-node``:
-  The maximum amount of user memory, that a query may use on any one machine.
-
 * ``discovery.uri``:
   The Trino coordinator has a discovery service that is used by all the nodes
   to find each other. Every Trino instance registers itself with the discovery
@@ -233,9 +242,17 @@ These properties require some explanation:
   port of the Trino coordinator. If you have disabled HTTP on the coordinator,
   the URI scheme must be ``https``, not ``http``.
 
-The above configuration properties are a minimal set to help you get started.
-Please see :doc:`/admin` and :doc:`/security` for a more comprehensive list.
-In particular, see :doc:`/admin/resource-groups` for configuring queuing policies.
+The above configuration properties are a *minimal set* to help you get started.
+All additional configuration is optional and varies widely based on the specific
+cluster and supported use cases. The :doc:`/admin` and :doc:`/security` sections
+contain documentation for many aspects, including :doc:`/admin/resource-groups`
+for configuring queuing policies and :doc:`/admin/fault-tolerant-execution`.
+
+The :doc:`/admin/properties` provides a comprehensive list of the supported
+properties for topics such as :doc:`/admin/properties-general`,
+:doc:`/admin/properties-resource-management`,
+:doc:`/admin/properties-query-management`,
+:doc:`/admin/properties-web-interface`, and others.
 
 .. _log-levels:
 
@@ -258,7 +275,7 @@ The default minimum level is ``INFO``,
 thus the above example does not actually change anything.
 There are four levels: ``DEBUG``, ``INFO``, ``WARN`` and ``ERROR``.
 
-.. _catalog_properties:
+.. _catalog-properties:
 
 Catalog properties
 ^^^^^^^^^^^^^^^^^^
@@ -281,12 +298,45 @@ contents to mount the ``jmx`` connector as the ``jmx`` catalog:
 
 See :doc:`/connector` for more information about configuring connectors.
 
-.. _running_trino:
+.. _running-trino:
 
 Running Trino
 --------------
 
-The installation directory contains the launcher script in ``bin/launcher``.
+The installation provides a ``bin/launcher`` script, which requires Python in
+the ``PATH``. The script can be used manually or as a daemon startup script. It
+accepts the following commands:
+
+.. list-table:: ``launcher`` commands
+  :widths: 15, 85
+  :header-rows: 1
+
+  * - Command
+    - Action
+  * - ``run``
+    - Starts the server in the foreground and leaves it running. To shut down
+      the server, use Ctrl+C in this terminal or the ``stop`` command from
+      another terminal.
+  * - ``start``
+    - Starts the server as a daemon and returns its process ID.
+  * - ``stop``
+    - Shuts down a server started with either ``start`` or ``run``. Sends the
+      SIGTERM signal.
+  * - ``restart``
+    - Stops then restarts a running server, or starts a stopped server,
+      assigning a new process ID.
+  * - ``kill``
+    - Shuts down a possibly hung server by sending the SIGKILL signal.
+  * - ``status``
+    - Prints a status line, either *Stopped pid* or *Running as pid*.
+
+A number of additional options allow you to specify configuration file and
+directory locations, as well as Java options. Run the launcher with ``--help``
+to see the supported commands and command line options.
+
+The ``-v`` or ``--verbose`` option for each command prepends the server's
+current settings before the command's usual output.
+
 Trino can be started as a daemon by running the following:
 
 .. code-block:: text
@@ -300,10 +350,6 @@ if using a supervision system like daemontools:
 .. code-block:: text
 
     bin/launcher run
-
-Run the launcher with ``--help`` to see the supported commands and
-command line options. In particular, the ``--verbose`` option is
-very useful for debugging the installation.
 
 The launcher configures default values for the configuration
 directory ``etc``, configuration files, the data directory ``var``,
